[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rxepics"
version = "0.1.0"
description = "Reactive streams for EPICS Channel Access"
requires-python = ">=3.11"
dependencies = [
    "caproto[asyncio]>=1.0",
    "reactivex>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
